--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,60 @@
     --color-menu: #000000;
     --color-controles: #181818;
 }
-
+element.style {
+    --panel-gap: 0px;
+}
+/*-----------------------Estilos Generales-----------------------*/
 body {
     background: var(--color-fondo);
+    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
+    line-height: 1.6;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 600px;
+    min-width: 768px;
+    width: 100%;
+    color: white;
+    text-transform: none;
 }
-.menu{
-    background: var(--color-menu);
+
+.contenido{
+    height: 100%;
+    position: relative;
+    isolation: isolate;
+    width: 100%;
+    z-index: 0;
+
+    display: grid;
+    gap: var(panel-gap);
+    grid-template-areas:
+     "norte" "oeste" "sur";
+     grid-template-columns: auto 1fr;
+     grid-template-rows: auto 1fr auto;
+     height: 100%;
+     min-height: 100%;
+     position: relative;
+     width: 100%;
 }
+/*-----------------------Estilos del Menu-----------------------*/
+
+
+
+
 
 .btn_Menu {
     font-size: 14px;
-    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
+
 }
-.btn_nav{
+
+.btn_nav {
     background: red;
 }
 
@@ -24,23 +65,25 @@ body {
     height: 40px;
 }
 
-.img-caratula{
+.img-caratula {
     width: 329px;
     height: 329px;
 }
-.img-minicaratula{
-    width: 56px;
-    height: 56px;
-}
+
 
 /*estilos de los iconos */
 .material-icons.md-12 {
     font-size: 12px;
 }
+
 .material-icons.md-16 {
     font-size: 16px;
 }
+
 .material-icons.md-24 {
     font-size: 24px;
 }
-.material-icons.md-light { color: rgba(255, 255, 255, 1) }
+
+.material-icons.md-light {
+    color: rgba(255, 255, 255, 1)
+}
