--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --color-menu: #000000;
     --color-controles: #181818;
 }
+
 /*-----------------------Estilos Generales-----------------------*/
 body {
     background: var(--color-fondo);
@@ -24,7 +25,7 @@ body {
     text-transform: none;
 }
 
-.contenido{
+.contenido {
     height: 100%;
     position: relative;
     isolation: isolate;
@@ -34,26 +35,27 @@ body {
     display: grid;
     gap: var(panel-gap);
     grid-template-areas:
-     "norte" "oeste" "sur";
-     grid-template-columns: auto 1fr;
-     grid-template-rows: auto 1fr auto;
-     height: 100%;
-     min-height: 100%;
-     position: relative;
-     width: 100%;
+        "oeste norte norte" "oeste centro este" "sur sur sur";
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr auto;
+    height: 100%;
+    min-height: 100%;
+    position: relative;
+    width: 100%;
 }
+
 /*-----------------------Estilos de la barra superior-----------------------*/
-.barra-superior{
+.barra-superior {
     grid-area: norte;
     height: 64px;
     min-width: 0;
     pointer-events: none;
 }
-header{
+header {
     padding: 16px 20px;
     padding-inline-end: 32px;
 }
-header{
+header {
     -webkit-box-align: center;
     -webkit-box-pack: justify;
     align-items: center;
@@ -67,11 +69,11 @@ header{
     width: 100%;
     z-index: 10;
 }
-.btn-navegacion{
+.btn-navegacion {
     display: flex;
     gap: 16px;
 }
-.btn-navegacion .btn_nav{
+.btn-navegacion .btn_nav {
     -webkit-box-pack: center;
     -webkit-box-align: center;
     align-items: center;
@@ -87,17 +89,17 @@ header{
     width: 32px;
     opacity: .6;
 }
-.norte-espacio1{
+.norte-espacio1 {
     -webkit-box-flex: 1;
     flex-grow: 1;
     min-width: 0;
     pointer-events: none;
 }
-.norte-espacio2{
+.norte-espacio2 {
     display: flex;
     gap: 8px;
 }
-.btn_premium{
+.btn_premium {
     margin-left: auto;
     font-size: 0.875rem;
     box-sizing: border-box;
@@ -110,19 +112,19 @@ header{
     vertical-align: middle;
     padding-block: 3px;
     padding-inline: 15px;
-    border: 1px solid var(--essential-subdued,#878787);
+    border: 1px solid var(--essential-subdued, #878787);
     color: white;
     min-block-size: 32px;
     display: inline-flex;
     align-items: center;
 }
-.btn_usuario{
+.btn_usuario {
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     align-items: center;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0, 0, 0, .7);
     border: 0;
     border-radius: 23px;
     color: #fff;
@@ -136,27 +138,254 @@ header{
     padding: 2px;
     position: relative;
 }
-.user{
+.user {
     width: 28px;
     height: 28px;
     background-color: #878787;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;
 }
-.triangulo{
+.triangulo {
     transform: rotate(90deg);
     margin-inline-end: 6px;
 }
+
 /*-----------------------Estilos del Menu-----------------------*/
-
-
-
-
+.menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    grid-area: oeste;
+    min-height: 0;
+    position: relative;
+    width: 240px;
+    z-index: 4;
+}
+.contenedor-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-flex: 1;
+    cursor: default;
+    flex: 1;
+    flex-direction: column;
+    min-height: 0;
+    padding-top: 24px;
+    user-select: none;
+    width: 100%;
+}
+.logotipo {
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: justify;
+    flex-direction: row;
+    flex-shrink: 0;
+    justify-content: space-between;
+}
+.contenedor-logo {
+    border: 0;
+    ;
+    flex: 1;
+    margin-bottom: 18px;
+    padding: 0 24px;
+}
 .logo {
     width: 130px;
     height: 40px;
+}
+ul{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 2px;
+    list-style: none;
+}
+li {
+    padding: 0 8px;
+}
+.elemento-li {
+    color: white;
+    font-size: 0.875rem;
+    font-weight: 700;
+    text-decoration: none;
+    -webkit-box-align: center;
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    gap: 16px;
+    height: 40px;
+    padding: 0 16px;
+    transition-duration: .2s;
+    transition-timing-function: linear;
+    vertical-align: baseline;
+    box-sizing: border-box;
+}
+.o{
+    opacity: 0.75;
+}
+.contendor-playlist{
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-box-flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 0;
+    margin-top: 24px;
+    position: relative;
+}
+.contendor-playlist1{
+    flex: 1;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+.btn-nuevalista{
+    color: white;
+    font-size: 0.875rem;
+    font-weight: 700;
+    opacity: 0.75;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    min-height: max-content;
+    opacity: .7;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 24px;
+    padding-right: 24px;
+    transition: opacity .2s linear;
+    width: 100%;
+
+}
+.icono-add{
+    margin-right: 16px;
+    display: flex;
+    flex-shrink: 0;
+    height: 24px;
+    justify-content: center;
+    position: relative;
+    width: 24px;
+}
+.icono-add1{
+    -webkit-box-align: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 2px;
+    color: #000;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+}
+.color-icono{
+    background: linear-gradient(135deg,#450af5,#c4efd9);
+    border-radius: 2px;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    color: white;
+}
+.division{
+    position: relative;
+}
+.separador{
+    background-color: #282828;
+    border: none;
+    height: 1px;
+    margin-top: 8px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-bottom: 0px;
+    min-height: 1px;
+
+}
+.div-listas{
+    height: 100%;
+}
+.div-listas1{
+    overflow: visible!important;
+    position: relative;
+    height: 100%;
+    overscroll-behavior-y: contain;
+
+}
+.lli{
+    padding-left: 24px;
+    padding-right: 24px;
+    display: flex;
+    position: relative;
+}
+.lista1{
+    color: #b3b3b3;
+    cursor: default;
+    font-size: 0.875rem;
+    font-weight: 700;
+    text-decoration: none;
+    display: flex;
+    flex: 1;
+    line-height: 15px;
+    justify-content: flex-start;
+    overflow: hidden;
+}
+.btn-vol{
+    align-items: center;
+    color: #b3b3b3;
+    display: flex;
+    flex-shrink: 0;
+    line-height: 0;
+    margin: 0;
+    margin-inline-start: 8px;
+}
+.btn-v{
+    line-height: 1;
+    margin-left: 8px;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+    position: relative;
+}
+.instalar{
+    overflow: hidden;
+    z-index: 1;
+}
+.instalar-app{
+    padding: 0 8px;
+}
+instalar-a{
+    -webkit-box-align: center;
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    gap: 16px;
+    height: 40px;
+    padding: 0 16px;
+    color: #b3b3b3;
+}
+.desc{
+    overflow-clip-margin: content-box;
+    overflow: hidden;
+}
+
+/*-----------------------Estilos del footer-----------------------*/
+
+
+
+
+.principal{
+    background-color: red;
 }
 
 .img-caratula {
