--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ instalar-a {
 footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    background-color:var(--color-controles);
+    background-color: var(--color-controles);
     border-top: 1px solid #282828;
     display: flex;
     -ms-flex-direction: column;
@@ -469,13 +469,15 @@ footer {
 .icon {
     position: relative;
 }
-.contenedor-icon{
+
+.contenedor-icon {
     width: 56px;
     height: 56px;
 }
-.img-minicaratula{
+
+.img-minicaratula {
     width: 100%;
-    height:  100%;
+    height: 100%;
 }
 
 .info-cancion {
@@ -487,6 +489,7 @@ footer {
         "badges subtitle" /auto 1fr;
     margin: 0 14px;
 }
+
 .titulo {
     color: #fff;
     grid-area: titulo;
@@ -497,11 +500,11 @@ footer {
 .contenedor-titulo {
     margin-left: -6px;
     margin-right: -6px;
-    -webkit-mask-image: linear-gradient(90deg, transparent 0, #000 6px, #000 calc(100% - 12px), transparent);
     overflow: hidden;
     position: relative;
 }
-.contenedor2{
+
+.contenedor2 {
     display: flex;
     padding-inline-end: 12px;
     padding-inline-start: 6px;
@@ -509,7 +512,8 @@ footer {
     white-space: nowrap;
     width: fit-content;
 }
-.contenedor3{
+
+.contenedor3 {
     font-size: 0.875rem;
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
@@ -518,27 +522,32 @@ footer {
     color: inherit;
     width: 100%;
 }
-.tit{
+
+.tit {
     font-weight: 550;
     color: white;
     text-decoration: none;
 }
-.artista{
+
+.artista {
     grid-area: subtitle;
     grid-column-start: badges;
     min-width: 0;
     width: 100%;
 }
-.subtit{
+
+.subtit {
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
     margin-block: 0px;
     font-size: 0.785rem;
     font-weight: 400;
-    color: var(--text-subdued,#6a6a6a);text-decoration: none;
+    color: var(--text-subdued, #6a6a6a);
+    text-decoration: none;
 }
-.btn_like{
-    color: hsla(0,0%,100%,.7);
+
+.btn_like {
+    color: hsla(0, 0%, 100%, .7);
     align-items: center;
     display: flex;
     justify-content: center;
@@ -549,32 +558,191 @@ footer {
     min-width: 32px;
     width: 32px;
 }
+
 /*Estilos del div 2: controles*/
+.control {
+    max-width: 722px;
+    width: 40%;
+}
 
+.division-control {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center
+}
 
+.contenedor-controles {
+    gap: 16px;
+    margin-bottom: 8px;
+    flex-flow: row nowrap;
+    width: 100%;
+    display: flex;
+}
 
+.izquierda {
+    justify-content: flex-end;
+    display: flex;
+    flex: 1;
+    gap: 8px;
+}
+
+.btn-control {
+    align-items: center;
+    background: transparent;
+    border: none;
+    color: hsla(0, 0%, 100%, .7);
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    min-width: 32px;
+    position: relative;
+    width: 32px;
+    padding: 0;
+
+}
+
+.btn_pause {
+    align-items: center;
+    background-color: #fff;
+    border: none;
+    border-radius: 50%;
+    color: #000;
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    min-width: 32px;
+    position: relative;
+    width: 32px;
+    padding: 0;
+}
+
+.derecha {
+    display: flex;
+    flex: 1;
+    gap: 8px;
+}
+
+.barra-play {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.reproduciendo {
+    box-sizing: border-box;
+    margin-block: opx;
+    font-size: 0.7875rem;
+    font-weight: 400;
+    color: #6a6a6a;
+    min-width: 40px;
+    text-align: right;
+}
+.barra-avance {
+    height: 5px;
+    position: relative;
+    width: 100%;
+    background-color: #5E5E5E;
+    opacity: .7;
+}
+.avance{
+    box-sizing: border-box;
+    margin-block: opx;
+    font-size: 0.7875rem;
+    font-weight: 400;
+    color: #6a6a6a;
+    min-width: 40px;
+    text-align: left;
+}
+.btn-secundarios{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    min-width: 180px;
+    width: 30%;
+}
+.contenedor-btn{
+    align-items: center;
+    flex-grow: 1;
+    justify-content: flex-end;
+    display: flex;
+}
+.btn-sec{
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    vertical-align: middle;
+    color: hsla(0,0%,100%,.7) ;
+    padding-block: 8px;
+    min-block-size: 32px;
+    padding-inline: 8px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.barra-volumen{
+    margin-right: 4px;
+    align-items: center;
+    display: flex;
+    flex : 0 1 125px;
+    position: relative;
+}
+.btn-volumen{
+    background-color: transparent;
+    border: none;
+    color: hsla(0,0%,100%,.7);
+    height: 32px;
+    min-width: 32px;
+    width: 32px;
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.barra-vol{
+    height: 5px;
+    position: relative;
+    width: 100%;
+    background-color: #5E5E5E;
+}
+.slider {
+    width: 100%;
+    height: 5px;
+    background-color: transparent;
+    outline: none;
+    opacity: 0;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
 
 .principal {
+    grid-area: centro;
     background-color: red;
 }
-
-.img-caratula {
-    width: 329px;
-    height: 329px;
-}
-
 
 /*estilos de los iconos */
 .material-icons.md-12 {
     font-size: 12px;
 }
 
-.material-icons.md-16 {
-    font-size: 16px;
+.material-icons.md-20 {
+    font-size: 20px;
+}
+
+.material-icons.md-18 {
+    font-size: 18px;
 }
 
 .material-icons.md-24 {
     font-size: 24px;
+}
+
+.material-icons.md-28 {
+    font-size: 28px;
 }
 
 .material-icons.md-light {
